--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste de Remoção de Fundo</title>
-
-    <script src="https://cdn.jsdelivr.net/npm/@imgly/background-removal@latest/dist/browser.js"></script>
-
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -124,59 +121,78 @@
     </main>
 
     <script>
+        // Seleciona os elementos do DOM
         const imageInput = document.getElementById('imageInput');
         const removeBgBtn = document.getElementById('removeBgBtn');
         const loadingIndicator = document.getElementById('loading-indicator');
         const originalContainer = document.getElementById('original-container');
         const resultContainer = document.getElementById('result-container');
-
         let currentFile = null;
 
-        imageInput.addEventListener('change', (event) => {
-            currentFile = event.target.files[0];
-            
-            originalContainer.innerHTML = '';
-            resultContainer.innerHTML = '';
+        // Função que anexa os eventos e a lógica principal
+        // SÓ SERÁ CHAMADA DEPOIS QUE A BIBLIOTECA CARREGAR
+        function initializeApp() {
+            console.log('Biblioteca carregada com sucesso. App inicializado.');
 
-            if (currentFile) {
-                const reader = new FileReader();
-                reader.onload = (e) => {
+            // Evento para quando o usuário escolhe um arquivo
+            imageInput.addEventListener('change', (event) => {
+                currentFile = event.target.files[0];
+                originalContainer.innerHTML = '';
+                resultContainer.innerHTML = '';
+
+                if (currentFile) {
+                    const reader = new FileReader();
+                    reader.onload = (e) => {
+                        const img = document.createElement('img');
+                        img.src = e.target.result;
+                        originalContainer.appendChild(img);
+                    };
+                    reader.readAsDataURL(currentFile);
+                    removeBgBtn.disabled = false;
+                } else {
+                    removeBgBtn.disabled = true;
+                }
+            });
+
+            // Evento para o clique no botão de remover fundo
+            removeBgBtn.addEventListener('click', async () => {
+                if (!currentFile) return;
+
+                loadingIndicator.style.display = 'block';
+                resultContainer.innerHTML = '';
+
+                try {
+                    // A chamada agora é segura, pois a biblioteca já carregou
+                    const imageBlob = await ImglyRemoveBackground.removeBackground(currentFile);
+                    const resultUrl = URL.createObjectURL(imageBlob);
                     const img = document.createElement('img');
-                    img.src = e.target.result;
-                    originalContainer.appendChild(img);
-                };
-                reader.readAsDataURL(currentFile);
-                removeBgBtn.disabled = false;
-            } else {
-                removeBgBtn.disabled = true;
-            }
-        });
+                    img.src = resultUrl;
+                    resultContainer.appendChild(img);
+                } catch (error) {
+                    console.error('Falha ao remover o fundo:', error);
+                    alert('Ocorreu um erro ao processar a imagem. Veja o console para detalhes.');
+                } finally {
+                    loadingIndicator.style.display = 'none';
+                }
+            });
+        }
 
-        removeBgBtn.addEventListener('click', async () => {
-            if (!currentFile) {
-                alert('Por favor, escolha uma imagem primeiro.');
-                return;
-            }
+        // --- LÓGICA DE CARREGAMENTO SEGURO ---
+        // 1. Cria um elemento <script> dinamicamente
+        const libraryScript = document.createElement('script');
+        libraryScript.src = 'https://cdn.jsdelivr.net/npm/@imgly/background-removal@latest/dist/browser.js';
 
-            loadingIndicator.style.display = 'block';
-            resultContainer.innerHTML = '';
+        // 2. Define o que fazer QUANDO o script carregar com sucesso
+        libraryScript.onload = initializeApp;
 
-            try {
-                // Esta chamada agora funcionará, pois o script foi carregado corretamente
-                const imageBlob = await ImglyRemoveBackground.removeBackground(currentFile);
+        // 3. Define o que fazer se o carregamento FALHAR
+        libraryScript.onerror = () => {
+            console.error('Falha crítica: Não foi possível carregar a biblioteca de remoção de fundo.');
+            alert('ERRO: Não foi possível carregar o recurso de remoção de fundo. Verifique a conexão com a internet.');
+        };
 
-                const resultUrl = URL.createObjectURL(imageBlob);
-                const img = document.createElement('img');
-                img.src = resultUrl;
-                resultContainer.appendChild(img);
-
-            } catch (error) {
-                console.error('Falha ao remover o fundo:', error);
-                alert('Ocorreu um erro ao processar a imagem. Veja o console para detalhes.');
-            } finally {
-                loadingIndicator.style.display = 'none';
-            }
-        });
+        // 4. Adiciona o script ao <head> para iniciar o download
+        document.head.appendChild(libraryScript);
     </script>
 
 </body>
