--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
 
   <!-- CDN do @imgly/background-removal -->
-  <script src="https://cdn.jsdelivr.net/npm/@imgly/background-removal@1.7.0/dist/background-removal.browser.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@imgly/background-removal"></script>
 
   <script>
     const fileInput = document.getElementById("fileInput");
@@ -76,7 +76,7 @@
       await new Promise(res => image.onload = res);
 
       // Remove o fundo
-      const blob = await ImglyRemoveBackground.removeBackground(image);
+      const blob = await imglyRemoveBackground(image);
       const url = URL.createObjectURL(blob);
 
       // Exibe a imagem sem fundo
